# seco-labor-mcp

./: CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  README.de.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/seco_labor_mcp/: __init__.py  server.py
tests/: conftest.py  test_server.py
